// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> Debe mostrar items cuando se cargan las imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3>
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Prueba"
      url="https://test.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid/> Se debe mostrar <GifGrid/> correctamente 1`] = `
<Fragment>
  <h3>
    Goku
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
